Initial Refactoring and adding Mapper Unit tests